syntax = "proto3";

service GetPersonUseCase {
    rpc getPerson (PersonGetRequest) returns (Person);
}

message PersonGetRequest {
    string id = 1;
}

message Person {
    string name = 1;
    int32 id = 2;
    string email = 3;
    repeated PhoneNumber phones = 4;
}

message PhoneNumber {
    string number = 1;
}